--- a/pages/question9.html
+++ b/pages/question9.html
@@ -23,10 +23,48 @@
             </header>
 
             <div class="pBarContainer">
-                <p><span class="pBar" id="sp00"></span><span class="pBar" id="sp01"></span><span class="pBar"
-                        id="sp02"></span><span class="pBar" id="sp03"></span><span class="pBar" id="sp04"></span><span
-                        class="pBar" id="sp05"></span><span class="pBar" id="sp06"></span><span class="pBar"
-                        id="sp07"></span><span class="pBar" id="sp08"></span><span class="pBar" id="sp09"></span></p>
+                <p>
+                    <span class="pBar" id="sp00">
+                        <img id="ck00" src="../images/checkmark.png" alt="" width="20px;" style="display: none;"> 
+                        <img id="x00" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                    <span class="pBar" id="sp01">
+                        <img id="ck01" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
+                        <img id="x01" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                    <span class="pBar" id="sp02">
+                        <img id="ck02" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
+                        <img id="x02" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                    <span class="pBar" id="sp03">
+                        <img id="ck03" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
+                        <img id="x03" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                    <span class="pBar" id="sp04">
+                        <img id="ck04" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
+                        <img id="x04" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                    <span class="pBar" id="sp05">
+                        <img id="ck05" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
+                        <img id="x05" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                    <span class="pBar" id="sp06">
+                        <img id="ck06" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
+                        <img id="x06" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                    <span class="pBar" id="sp07">
+                        <img id="ck07" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
+                        <img id="x07" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                    <span class="pBar" id="sp08">
+                        <img id="ck08" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
+                        <img id="x08" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                    <span class="pBar" id="sp09">
+                        <img id="ck09" src="../images/checkmark.png" alt="" width="20px;" style="display: none;">
+                        <img id="x09" src="../images/Xmark.png" alt="" width="20px;" style="display: none;">
+                    </span>
+                </p>
             </div>
 
             <!-- Quiz Nav -->
