--- a/email_templates/email2.html
+++ b/email_templates/email2.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>paypal</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/email-base.css">
-    <link rel="stylesheet" href="css/email2.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email2.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
             From: <span class="tooltip" style="color: blue; text-decoration: underline;">PayPal
                 <span class="tooltiptext">mailto:itechsoftbd@gmail.com <br>Ctrl + Click to follow link
                 </span>
-</span> <br>
+            </span> <br>
             Sent: Monday, July 5, 2021 12:35 PM<br>
             To: jschmoe@yahoo.com<br>
             Subject: [Limited Account] misinformation on the account, 7/5/2021 7:34:57 PM #198-777-84011<br>
@@ -29,7 +29,7 @@
         </h4><br>
         <div class="body">
             <div class="paypal">
-                <img src="images/paypal logo.png" alt="paypal logo">
+                <img src="../images/paypal logo.png" alt="paypal logo">
             </div>
             <h3>
                 Hello,
@@ -40,22 +40,26 @@
 
             <p style="font-family:'Times New Roman', Times, serif;">
                 an error was detected in your account information<br><br>
-                We need to confirm the data matches your account to avoid misuse and restore all rights that have
+                We need to confirm the data matches your account to avoid misuse and restore all rights that
+                have
                 been<br><br>
                 limited to the account<br><br>
-                if there is no confirmation from the account owner for 24 hours, the account will be<br><br> locked
+                if there is no confirmation from the account owner for 24 hours, the account will be<br><br>
+                locked
                 permanently.<br><br>
                 What do you need to do?<br><br>
                 Correct your account information now and follow the steps we provide
             </p><br><br>
 
             <div class="tooltip tooltip-button">Confirm My Account
-                <span class="tooltiptext">https://www.reemind.duckdns.org/admin/information/<br> Ctrl + Click to follow
+                <span class="tooltiptext">https://www.reemind.duckdns.org/admin/information/<br> Ctrl +
+                    Click to follow
                     link</span>
             </div><br><br>
 
             <p>Thank you for using PayPal</p><br>
-            <p style="font-size: smaller">PayPal Service<br><br>If you not signed in to PayPal recently and be receieve
+            <p style="font-size: smaller">PayPal Service<br><br>If you not signed in to PayPal recently and
+                be receieve
                 someone may have accessed your account,go to PayPal (<span class="tooltip"
                     style="color: blue; text-decoration: underline;">https://paypal.com)
                     <span class="tooltiptext">https://www.paypal.com/<br> Ctrl + Click to follow link
