--- a/email_templates/email3.html
+++ b/email_templates/email3.html
@@ -8,42 +8,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>norton</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/email-base.css">
-    <link rel="stylesheet" href="css/email3.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email3.css">
 </head>
 
 <body>
 
     <div class="em-template">
 
-            <p><br>
-                <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Napoleon Tanner</strong> &lt;ntanner698@gmail.com&gt;<br>
-            </p>
-            <hr>
+        <p><br>
+            <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Napoleon
+                Tanner</strong> &lt;ntanner698@gmail.com&gt;<br>
+        </p>
+        <hr>
 
         <p>
-            <span style="color: rgb(176, 176, 176); font-weight: bold;">To:  </span>avgantivirus@yopmail.com
+            <span style="color: rgb(176, 176, 176); font-weight: bold;">To: </span>avgantivirus@yopmail.com
         </p>
         <hr>
         <p><br>
-            <span style="font-size: large;">Norton</span>  Antivirus Computer Protection<br>
+            <span style="font-size: large;">Norton</span> Antivirus Computer Protection<br>
             Date : 08 February 2022<br><br>
 
             Order No : GFHD785<br>
             Dear Customer,<br><br>
 
-            We'd like to take this opportunity to thank you for your support over the past 36 months.<br><br>  
-            Your Credit card will be charged USD $ 699.99  on 08 February 2022 for another year of Protection. If you don't want our services please call on this number +1 <span style="border-bottom: 2px dotted;">(616) 678-3054</span>
-            This will allow you access to take full advantage of all your new account benefits.  <br><br> 
+            We'd like to take this opportunity to thank you for your support over the past 36
+            months.<br><br>
+            Your Credit card will be charged USD $ 699.99 on 08 February 2022 for another year of
+            Protection. If you don't want our services please call on this number +1 <span
+                style="border-bottom: 2px dotted;">(616) 678-3054</span>
+            This will allow you access to take full advantage of all your new account benefits. <br><br>
             The following are the details of your Recurring Billing.<br><br>
             Charge Frequency : Three Years<br>
             End Date: 08 February 2022<br>
             Amount: $ 699.99<br>
-            In case you don't want to continue with us then make sure you call us on +1 <span style="border-bottom: 2px dotted;">(616) 678-3054</span> before 08 February 2022 to avoid any recurring payment. We hope that you'll take this time to renew your membership and remain a part of our community.<br><br>
+            In case you don't want to continue with us then make sure you call us on +1 <span
+                style="border-bottom: 2px dotted;">(616) 678-3054</span> before 08 February 2022 to avoid
+            any recurring payment. We hope that you'll take this time to renew your membership and remain a
+            part of our community.<br><br>
             Kindly Regards<br><br>
-            <span style="font-size: large;">Norton  Antivirus </span>
-            </p>
+            <span style="font-size: large;">Norton Antivirus </span>
+        </p>
         <br>
 
     </div>
