--- a/email_templates/email7.html
+++ b/email_templates/email7.html
@@ -8,49 +8,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>google hangouts</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/email-base.css">
-    <link rel="stylesheet" href="css/email7.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email7.css">
 </head>
 
 <body>
     <div class="em-template">
-    <div class="em-from-div">
-        <span class="em-dot">
-            <p>GH</p>
-        </span>
-        <h4>
-            <strong>Google Hangouts</strong> <span style="color: gray;">&lt;no-reply@google.hangouts.com&gt;<br>
-            2/14/2022 12:06 PM</span>
-        </h4>
-    </div>
 
-    <!-- <h4><br>To: chris.kissler@gmail.com</h4> -->
-    <br>
+        <div class="em-from-div">
+            <div class="em-dot">
+                GH
+            </div>
+            <h4>
+                <strong>Google Hangouts</strong> <span
+                    style="color: gray;">&lt;no-reply@google.hangouts.com&gt;</span>
+            </h4>
+            <h4 class="em-dot-date">
+                2/14/2022 12:06 PM
+            </h4>
+        </div>
+        <br>
 
-    <div class="hangouts">
-        <img src="images/google-hangouts3.png" alt="google hangouts banner">
+        <!-- <h4><br>To: chris.kissler@gmail.com</h4> -->
+        <br>
+
+        <div class="hangouts">
+            <img src="../images/google-hangouts3.png" alt="google hangouts banner">
+        </div>
+        <div class="conversation">
+            <div class="person-icon">
+                <img src="../images/person-icon.png" alt="google hangouts banner">
+            </div>
+            <br><br>
+            <p style="margin-left: 0;">Roberta Cavallo added you to a group conversation.<br><br><span
+                    style="color: gray;">with 1 other</span></p><br><br>
+            <div class="tooltip tooltip-button">View Conversation
+                <span class="tooltiptext">https://google.hangouts.com/group-convo/hgroi33/</span>
+            </div><br><br><br>
+        </div>
+        <br>
+        <p style="font-size: small; color: gray;">
+            This notification was sent to <span style="color: blue;">chris.kissler@gmail.com</span>.
+            <span class="tooltip" style="color: blue;">Unsubscribe
+                <span class="tooltiptext">https://google.hangouts.com/unsubscribe/
+                </span>
+            </span> from these emails.<br>
+            To stop receiving Google Hangouts notifications from someone, open their Google profile and
+            click Mute.<br>
+            Google LLC, 1600 Amphitheatre Pkwy, Mountain View, CA 94043 USA<br><br>
+        </p>
     </div>
-    <div class="conversation">
-    <div class="person-icon">
-        <img src="images/person icon.png" alt="google hangouts banner">
-    </div>
-    <br><br><p style="margin-left: 0;">Roberta Cavallo added you to a group conversation.<br><br><span style="color: gray;">with 1 other</span></p><br><br>
-    <div class="tooltip tooltip-button">View Conversation
-        <span class="tooltiptext">https://google.hangouts.com/group-convo/hgroi33/</span>
-    </div><br><br><br>
-</div>
-<br>
-    <p style="font-size: small; color: gray;">
-        This notification was sent to <span style="color: blue;">chris.kissler@gmail.com</span>. 
-        <span class="tooltip" style="color: blue;">Unsubscribe
-            <span class="tooltiptext">https://google.hangouts.com/unsubscribe/
-            </span>
-        </span> from these emails.<br>
-        To stop receiving Google Hangouts notifications from someone, open their Google profile and click Mute.<br>
-        Google LLC, 1600 Amphitheatre Pkwy, Mountain View, CA 94043 USA<br><br>
-    </p>
-</div>
 </body>
 
 </html>    
