removed em-template added iframe

--- a/pages/question10.html
+++ b/pages/question10.html
@@ -68,10 +68,9 @@
             </div>
             <!-- Quiz Nav -->
             <main>
-
-                <div class="em-template" style="border: none;">
-                    <img style="width: 1100px;" src="../images/ups phish.png" alt="">
-                </div>
+                <iframe name="A" width=960 height=300 src="../email_templates/email10.html" >
+                </iframe>
+    
 
             </main>
 
