--- a/pages/question2.html
+++ b/pages/question2.html
@@ -69,61 +69,9 @@
             </div>
             <!-- Quiz Nav -->
             <main>
-
-                <div class="em-template">
-
-                    <h4 style="padding: 2em 0 0;">
-                        From: <span class="tooltip" style="color: blue; text-decoration: underline;">PayPal
-                            <span class="tooltiptext">mailto:itechsoftbd@gmail.com <br>Ctrl + Click to follow link
-                            </span>
-                        </span> <br>
-                        Sent: Monday, July 5, 2021 12:35 PM<br>
-                        To: jschmoe@yahoo.com<br>
-                        Subject: [Limited Account] misinformation on the account, 7/5/2021 7:34:57 PM #198-777-84011<br>
-                        Importance: High
-                    </h4><br>
-                    <div class="body">
-                        <div class="paypal">
-                            <img src="../images/paypal logo.png" alt="paypal logo">
-                        </div>
-                        <h3>
-                            Hello,
-                            <span style="color: rgb(61, 112, 232); font-weight: bold;">jschmoe@yahoo.com</span>
-                        </h3>
-                        <h3>Your PayPal has been Limited!!</h3>
-                        <br>
-
-                        <p style="font-family:'Times New Roman', Times, serif;">
-                            an error was detected in your account information<br><br>
-                            We need to confirm the data matches your account to avoid misuse and restore all rights that
-                            have
-                            been<br><br>
-                            limited to the account<br><br>
-                            if there is no confirmation from the account owner for 24 hours, the account will be<br><br>
-                            locked
-                            permanently.<br><br>
-                            What do you need to do?<br><br>
-                            Correct your account information now and follow the steps we provide
-                        </p><br><br>
-
-                        <div class="tooltip tooltip-button">Confirm My Account
-                            <span class="tooltiptext">https://www.reemind.duckdns.org/admin/information/<br> Ctrl +
-                                Click to follow
-                                link</span>
-                        </div><br><br>
-
-                        <p>Thank you for using PayPal</p><br>
-                        <p style="font-size: smaller">PayPal Service<br><br>If you not signed in to PayPal recently and
-                            be receieve
-                            someone may have accessed your account,go to PayPal (<span class="tooltip"
-                                style="color: blue; text-decoration: underline;">https://paypal.com)
-                                <span class="tooltiptext">https://www.paypal.com/<br> Ctrl + Click to follow link
-                                </span>
-
-                            </span> and <br><br>change your password as soon as possible</p>
-                        </span><br><br>
-                    </div>
-                </div>
+                <iframe name="A" width=960 height=300 src="../email_templates/email2.html" >
+                </iframe>
+    
             </main>
 
 
