--- a/pages/question4.html
+++ b/pages/question4.html
@@ -70,96 +70,9 @@
 
             <!-- Quiz Nav -->
             <main>
-
-                <div class="em-template">
-
-                    <h2 style="padding: 2em 0 0;">You made a purchase with your TJX Rewards® Platinum Mastercard®.</h2>
-
-                    <div class="em-from-div">
-                        <div class="em-dot">
-                            SM
-                        </div>
-                        <h4>
-                            <strong>Synchrony for your TJX Rewards® Platinum Mastercard®</strong>
-                        </h4>
-                        <h4 class="em-dot-date">
-                            &lt;customer.service@mail.synchronybank.com&gt;<br>
-                            1/11/2022 4:48 PM
-                        </h4>
-                    </div>
-
-                    <h4><br>To: annab23@hotmail.com</h4><br>
-                    <br>
-                    <div class="body">
-                        <p style="float: right; margin: 10px;">Account ending in: 9528 | <span class="tooltip"
-                                style="text-decoration: underline;">Log in
-                                <span class="tooltiptext">https://tjx.syf.com/login/?lang=en<br> Click or tap to follow
-                                    link</span>
-                            </span></p>
-                        <div class="tjx-synchrony">
-                            <img src="../images/tjmx-logos.png" alt="tjx logos">
-                            <img src="../images/synchrony-logo.png" alt="synchrony logo">
-                        </div>
-                        <h1>
-                            <span>You made a purchase of $31.11 from WALMART.</span>
-                        </h1>
-                        <br>
-
-                        <p>
-                            Hi Anna,<br><br>
-
-                            Thanks for making a purchase on your TJX Rewards® Platinum Mastercard®. Here are your
-                            purchase details:
-
-                        </p><br><br>
-
-                        <div class="googlemap">
-                            <div class="tooltip">
-                                <img src="../images/googlemap-walmart.png" alt="google map">
-                                <span
-                                    class="tooltiptext">https://www.google.com/maps/search/?api=1&query=36.365723,-94.217579<br>
-                                    Click or tap to follow link</span>
-                            </div>
-                        </div>
-
-                        <h2 style="text-align:center;">Update your alert preferences anytime.</h2><br>
-                        <div class="tooltip tooltip-button">Log In Now
-                            <span class="tooltiptext">https://tjx.syf.com/login/?lang=en<br> Click or tap to follow
-                                link</span>
-                        </div><br><br>
-
-                        <p>The TJX Rewards® Platinum Mastercard® is issued by Synchrony Bank pursuant to a license by
-                            Mastercard
-                            International Incorporated. Mastercard is a registered trademark, and the circles design is
-                            a trademark
-                            of Mastercard International Incorporated.<br><br>
-                            Head off identity theft before it happens. For more information about identity theft, please
-                            visit the
-                            Federal Trade Commission′ s (FTC) consumer
-                            <span class="tooltip" style="color: blue; text-decoration: underline;">website.
-                                <span class="tooltiptext">https://www.identitytheft.gov/<br> Click or tap to follow link
-                                </span>
-                            </span>
-                            </><br><br>
-                            This is an unmonitored email box. Please do not reply to this email.<br><br>
-                            ABOUT THIS EMAIL MESSAGE: This email was sent by Synchrony to provide important account
-                            servicing
-                            information regarding your TJX Rewards® Platinum Mastercard® account. You may receive
-                            account servicing
-                            emails even if you have requested not to receive marketing offers by email for your TJX
-                            Rewards®
-                            Platinum Mastercard® account. <br><br>
-                            Credit is extended by Synchrony Bank, which is located at <span
-                                style="border-bottom: 2px dotted;">170
-                                Election Road, Suite 125, Draper, UT 84020-6425,</span> USA.
-                            <span class="tooltip" style="color: blue; text-decoration: underline;">www.synchrony.com
-                                <span class="tooltiptext">https://www.synchrony.com/<br> Click or tap to follow link
-                                </span><br><br>
-
-                        </p><br>
-
-                    </div>
-                </div>
+                <iframe name="A" width=960 height=300 src="../email_templates/email4.html" >
+                </iframe>
+    
 
             </main>
 
