--- a/pages/question7.html
+++ b/pages/question7.html
@@ -71,52 +71,9 @@
             <!-- Quiz Nav -->
             <main>
 
-                <div class="em-template">
-
-                    <div class="em-from-div">
-                        <div class="em-dot">
-                            GH
-                        </div>
-                        <h4>
-                            <strong>Google Hangouts</strong> <span
-                                style="color: gray;">&lt;no-reply@google.hangouts.com&gt;</span>
-                        </h4>
-                        <h4 class="em-dot-date">
-                            2/14/2022 12:06 PM
-                        </h4>
-                    </div>
-                    <br>
-
-                    <!-- <h4><br>To: chris.kissler@gmail.com</h4> -->
-                    <br>
-
-                    <div class="hangouts">
-                        <img src="../images/google-hangouts3.png" alt="google hangouts banner">
-                    </div>
-                    <div class="conversation">
-                        <div class="person-icon">
-                            <img src="../images/person-icon.png" alt="google hangouts banner">
-                        </div>
-                        <br><br>
-                        <p style="margin-left: 0;">Roberta Cavallo added you to a group conversation.<br><br><span
-                                style="color: gray;">with 1 other</span></p><br><br>
-                        <div class="tooltip tooltip-button">View Conversation
-                            <span class="tooltiptext">https://google.hangouts.com/group-convo/hgroi33/</span>
-                        </div><br><br><br>
-                    </div>
-                    <br>
-                    <p style="font-size: small; color: gray;">
-                        This notification was sent to <span style="color: blue;">chris.kissler@gmail.com</span>.
-                        <span class="tooltip" style="color: blue;">Unsubscribe
-                            <span class="tooltiptext">https://google.hangouts.com/unsubscribe/
-                            </span>
-                        </span> from these emails.<br>
-                        To stop receiving Google Hangouts notifications from someone, open their Google profile and
-                        click Mute.<br>
-                        Google LLC, 1600 Amphitheatre Pkwy, Mountain View, CA 94043 USA<br><br>
-                    </p>
-                </div>
-
+                <iframe name="A" width=960 height=300 src="../email_templates/email7.html" >
+                </iframe>
+    
             </main>
 
             <!-- <nav data-role="navbar"> -->
