--- a/pages/question8.html
+++ b/pages/question8.html
@@ -69,12 +69,9 @@
 
             <!-- Quiz Nav -->
             <main>
-
-                <div class="em-template" style="border: none;">
-                    <img src="../images/amazon phish.png" alt="">
-
-
-                </div>
+                <iframe name="A" width=960 height=300 src="../email_templates/email8.html" >
+                </iframe>
+    
 
             </main>
             <!-- <nav data-role="navbar"> -->
