--- a/pages/question9.html
+++ b/pages/question9.html
@@ -70,11 +70,9 @@
             <!-- Quiz Nav -->
             <main>
 
-                <div class="em-template" style="border: none;">
-                    <img style="width: 70%;" src="../images/netflix phish.png" alt="">
-
-                </div>
-
+                <iframe name="A" width=960 height=300 src="../email_templates/email9.html" >
+                </iframe>
+    
             </main>
 
             <!-- <nav data-role="navbar"> -->
