change out em-template for iframe

--- a/email_templates/email5.html
+++ b/email_templates/email5.html
@@ -8,62 +8,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recruiter</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/email-base.css">
-    <link rel="stylesheet" href="css/email5.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/email-base.css">
+    <link rel="stylesheet" href="../css/email5.css">
 </head>
 
 <body>
 
     <div class="em-template">
 
-            <p><br>
-                <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Amber Arnold</strong> &lt;amber@polygence.com&gt;
-            </p>
-            <hr>
+        <p><br>
+            <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Amber
+                Arnold</strong> &lt;amber@polygence.com&gt;
+        </p>
+        <hr>
 
         <p>
-            <span style="color: rgb(176, 176, 176); font-weight: bold;">To:  </span>xavierplume@gmail.com
+            <span style="color: rgb(176, 176, 176); font-weight: bold;">To: </span>xavierplume@gmail.com
         </p>
         <hr>
         <p>
 
-                <span style="color: rgb(176, 176, 176); font-weight: bold;">Subject:  </span><strong>Senior Product Designer opportunity at high-growth startup</strong>
-            </p>
-            <hr>
-            <p>
-    
+            <span style="color: rgb(176, 176, 176); font-weight: bold;">Subject: </span><strong>Senior
+                Product Designer opportunity at high-growth startup</strong>
+        </p>
+        <hr>
+        <p>
+
             Hi Xave, <br><br>
 
-Friendly follow-up in case my email got lost in the mix. Would love to connect with you about the  <span class="tooltip" style="color: blue; text-decoration: underline;">Senior Product Designer
-    <span class="tooltiptext">https://znsrc.com/c/adqqzfgmqt<br> Click or tap to follow link
-    </span>
-</span>
-at
-<span class="tooltip" style="color: blue; text-decoration: underline;">Polygence
-    <span class="tooltiptext">https://znsrc.com/c/mloexxaehp<br> Click or tap to follow link
-    </span>
-</span>.
- <br><br>
+            Friendly follow-up in case my email got lost in the mix. Would love to connect with you about
+            the <span class="tooltip" style="color: blue; text-decoration: underline;">Senior Product
+                Designer
+                <span class="tooltiptext">https://znsrc.com/c/adqqzfgmqt<br> Click or tap to follow link
+                </span>
+            </span>
+            at
+            <span class="tooltip" style="color: blue; text-decoration: underline;">Polygence
+                <span class="tooltiptext">https://znsrc.com/c/mloexxaehp<br> Click or tap to follow link
+                </span>
+            </span>.
+            <br><br>
 
-This is a seriously special opportunity to join a mission-driven startup (    <span class="tooltip" style="color: blue; text-decoration: underline;">with excellent reviews<span class="tooltiptext">https://znsrc.com/c/gcxengnbav<br> Click or tap to follow link
-        </span>
-    </span>) before hitting the growth stage.<br><br>
+            This is a seriously special opportunity to join a mission-driven startup ( <span class="tooltip"
+                style="color: blue; text-decoration: underline;">with excellent reviews<span
+                    class="tooltiptext">https://znsrc.com/c/gcxengnbav<br> Click or tap to follow link
+                </span>
+            </span>) before hitting the growth stage.<br><br>
 
-If you're interested, find time with me here: 
-<span class="tooltip" style="color: blue; text-decoration: underline;">https://calendly.com/recr-amber/pg-ux
-    <span class="tooltiptext">https://znsrc.com/c/dnrevnchwn<br> Click or tap to follow link
-    </span>
-</span> <br><br>
+            If you're interested, find time with me here:
+            <span class="tooltip"
+                style="color: blue; text-decoration: underline;">https://calendly.com/recr-amber/pg-ux
+                <span class="tooltiptext">https://znsrc.com/c/dnrevnchwn<br> Click or tap to follow link
+                </span>
+            </span> <br><br>
 
-With thanks,<br>
-Amber Arnold<br>
-Fractional Recruiter for Polygence | <span class="tooltip" style="color: blue; text-decoration: underline;">Linkedin
-    <span class="tooltiptext">https://linkedln.com.znsrc.com/c/orluiyhvlp<br> Click or tap to follow link
-    </span>
-</span><br>
+            With thanks,<br>
+            Amber Arnold<br>
+            Fractional Recruiter for Polygence | <span class="tooltip"
+                style="color: blue; text-decoration: underline;">Linkedin
+                <span class="tooltiptext">https://linkedln.com.znsrc.com/c/orluiyhvlp<br> Click or tap to
+                    follow link
+                </span>
+            </span><br>
 
-            </p>
+        </p>
         <br>
 
     </div>
