add phrases instead of Question#'s

--- a/pages/question2.html
+++ b/pages/question2.html
@@ -20,7 +20,7 @@
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
             <header class="question-header" data-role="header">
-                <h1>Question #2</h1>
+                <h1>Keep it up!</h1>
             </header>
             
             <div class="pBarContainer">
