--- a/pages/question5.html
+++ b/pages/question5.html
@@ -20,7 +20,7 @@
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
             <header class="question-header" data-role="header">
-                <h1>Question #5</h1>
+                <h1>Look close...</h1>
             </header>
 
             <div class="pBarContainer">
@@ -69,69 +69,9 @@
             </div>
             <!-- Quiz Nav -->
             <main>
-
-                <div class="em-template">
-
-                    <p><br>
-                        <span style="color: rgb(176, 176, 176); font-weight: bold;">From:</span> <strong>Amber
-                            Arnold</strong> &lt;amber@polygence.com&gt;
-                    </p>
-                    <hr>
-
-                    <p>
-                        <span style="color: rgb(176, 176, 176); font-weight: bold;">To: </span>xavierplume@gmail.com
-                    </p>
-                    <hr>
-                    <p>
-
-                        <span style="color: rgb(176, 176, 176); font-weight: bold;">Subject: </span><strong>Senior
-                            Product Designer opportunity at high-growth startup</strong>
-                    </p>
-                    <hr>
-                    <p>
-
-                        Hi Xave, <br><br>
-
-                        Friendly follow-up in case my email got lost in the mix. Would love to connect with you about
-                        the <span class="tooltip" style="color: blue; text-decoration: underline;">Senior Product
-                            Designer
-                            <span class="tooltiptext">https://znsrc.com/c/adqqzfgmqt<br> Click or tap to follow link
-                            </span>
-                        </span>
-                        at
-                        <span class="tooltip" style="color: blue; text-decoration: underline;">Polygence
-                            <span class="tooltiptext">https://znsrc.com/c/mloexxaehp<br> Click or tap to follow link
-                            </span>
-                        </span>.
-                        <br><br>
-
-                        This is a seriously special opportunity to join a mission-driven startup ( <span class="tooltip"
-                            style="color: blue; text-decoration: underline;">with excellent reviews<span
-                                class="tooltiptext">https://znsrc.com/c/gcxengnbav<br> Click or tap to follow link
-                            </span>
-                        </span>) before hitting the growth stage.<br><br>
-
-                        If you're interested, find time with me here:
-                        <span class="tooltip"
-                            style="color: blue; text-decoration: underline;">https://calendly.com/recr-amber/pg-ux
-                            <span class="tooltiptext">https://znsrc.com/c/dnrevnchwn<br> Click or tap to follow link
-                            </span>
-                        </span> <br><br>
-
-                        With thanks,<br>
-                        Amber Arnold<br>
-                        Fractional Recruiter for Polygence | <span class="tooltip"
-                            style="color: blue; text-decoration: underline;">Linkedin
-                            <span class="tooltiptext">https://linkedln.com.znsrc.com/c/orluiyhvlp<br> Click or tap to
-                                follow link
-                            </span>
-                        </span><br>
-
-                    </p>
-                    <br>
-
-                </div>
-
+                <iframe name="A" width=960 height=300 src="../email_templates/email5.html" >
+                </iframe>
+    
             </main>
 
             <!-- <nav data-role="navbar"> -->
