--- a/pages/question1.html
+++ b/pages/question1.html
@@ -20,7 +20,7 @@
         <section data-theme="b" data-role="page" id="pgQuestion01" data-fullscreen="true">
             <!-- Navbar setup Start -->
             <header class="question-header" data-role="header">
-                <h1>Question #1</h1>
+                <h1>Keep focused!</h1>
             </header>
             <div class="pBarContainer">
                 <p>
@@ -66,8 +66,7 @@
                     </span>
                 </p>
             </div>
-            <br>
-            <br>
+        
             <!-- Quiz Nav -->
             <iframe name="A" width=960 height=300 src="../email_templates/email1.html" >
             </iframe>
