--- a/pages/question10.html
+++ b/pages/question10.html
@@ -19,7 +19,7 @@
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
             <header class="question-header" data-role="header">
-                <h1>Question #10</h1>
+                <h1>Don't let them hook you!</h1>
             </header>
 
             <div class="pBarContainer">
