--- a/pages/question3.html
+++ b/pages/question3.html
@@ -20,7 +20,7 @@
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
             <header class="question-header" data-role="header">
-                <h1>Question #3</h1>
+                <h1>Don't get caught!</h1>
             </header>
             <div class="pBarContainer">
                 <p>
