--- a/pages/question9.html
+++ b/pages/question9.html
@@ -19,7 +19,7 @@
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
             <!-- Navbar setup Start -->
             <header class="question-header" data-role="header">
-                <h1>Question #9</h1>
+                <h1>Stay on course!</h1>
             </header>
 
             <div class="pBarContainer">
