Fixed answer key and ifram issue

--- a/pages/question3.html
+++ b/pages/question3.html
@@ -14,7 +14,7 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body title="A" id="3" class="ui-body">
+<body id="3" class="ui-body">
     <div class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
