--- a/pages/question4.html
+++ b/pages/question4.html
@@ -14,7 +14,7 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body title="B" id="4" class="ui-body">
+<body id="4" class="ui-body">
     <div class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
@@ -70,7 +70,7 @@
 
             <!-- Quiz Nav -->
             <main>
-                <iframe name="A" width=960 height=300 src="../email_templates/email4.html" >
+                <iframe name="B" width=960 height=300 src="../email_templates/email4.html" >
                 </iframe>
     
 
