--- a/pages/question8.html
+++ b/pages/question8.html
@@ -13,7 +13,7 @@
     <title>Phishing Quiz</title>
 </head>
 
-<body title="A" id="8" class="ui-body">
+<body id="8" class="ui-body">
     <div class="content">
         <!-- Question #1 -->
         <section data-theme="b" data-role="page" id="pgQuestion02" data-fullscreen="true">
