adjustments to em-dot

--- a/email_templates/email1.html
+++ b/email_templates/email1.html
@@ -21,7 +21,9 @@
 
         <div class="em-from-div">
             <div class="em-dot">
+                <span>
                 BS
+                </span>
             </div>
             <h4>
                 <strong>Book Writing Service</strong> &lt;sales@thewritingcrib.com&gt;
