--- a/email_templates/email4.html
+++ b/email_templates/email4.html
@@ -21,7 +21,9 @@
 
         <div class="em-from-div">
             <div class="em-dot">
+                <span>
                 SM
+                </span>
             </div>
             <h4>
                 <strong>Synchrony for your TJX Rewards® Platinum Mastercard®</strong>
