--- a/email_templates/email6.html
+++ b/email_templates/email6.html
@@ -19,7 +19,9 @@
 
         <div class="em-from-div">
             <div class="em-dot">
-                D
+                <span>
+                    D
+                </span>
             </div>
             <h4>
                 <strong>Dropbox</strong>
