--- a/email_templates/email7.html
+++ b/email_templates/email7.html
@@ -18,7 +18,9 @@
 
         <div class="em-from-div">
             <div class="em-dot">
+                <span>
                 GH
+                </span>
             </div>
             <h4>
                 <strong>Google Hangouts</strong> <span
