added br to tooltip

--- a/email_templates/email1.html
+++ b/email_templates/email1.html
@@ -49,7 +49,7 @@
             <br>
 
             <p class="tooltip" style="color: teal; font-size: large;"><strong>Chat with Us Now</strong>
-                <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/ Click or
+                <span class="tooltiptext">https://trk.cpro20.com/click/gf69-3hvty-1y9cr-3e8t7z4/ <br>Click or
                     tap to
                     follow link</span>
             </p><br>
